--- a/pages/mall/components/goods-item/index.wxml
+++ b/pages/mall/components/goods-item/index.wxml
@@ -13,8 +13,8 @@
   </view>
   <view class="info-wrap">
     <view class="price">
-      <text style="margin-right: 4rpx; color: #ff5049;">¥</text>
-      <text class="num" style="color: #ff5049; font-size: 32rpx;">200</text>
+      <text style="margin-right: 4rpx; color: #EE0D23;">¥</text>
+      <text class="num" style="color: #EE0D23; font-size: 32rpx;">200</text>
       <text style="margin-left: 2rpx;">起</text>
     </view>
     <view class="sales">
