--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -4,7 +4,7 @@
     <view class="title omit">{{item.name}}</view>
     <view class="info-wrap row between">
       <view class="row baseline">
-        <price-unit price="{{item.price}}" />
+        <price-unit price="{{item.price || 0}}" />
         <view class="market-price">¥{{item.marketPrice}}</view>
       </view>
       <view class="sales-volume">
