--- a/components/goods-item/index.wxml
+++ b/components/goods-item/index.wxml
@@ -1,4 +1,4 @@
-<view class="goods-item">
+<view class="goods-item" bindtap="navToGoodsDetail">
   <image class="cover" mode="widthFix" src="{{item.image}}" lazy-load />
   <view class="content">
     <view class="title omit">{{item.name}}</view>
@@ -12,7 +12,7 @@
         <text style="font-weight: bold;">{{ item.salesVolume }}</text>
       </view>
     </view>
-    <view class="shop-info row" wx:if="{{item.shopInfo}}">
+    <view class="shop-info row" wx:if="{{item.shopInfo}}" catchtap="navToShop">
       <image class="shop-avatar" src="{{item.shopInfo.avatar}}" lazy-load />
       <view class="shop-name omit single-line">{{item.shopInfo.name}}</view>
     </view>
