--- a/pages/mall/subpages/goods/subpages/goods-detail/index.wxml
+++ b/pages/mall/subpages/goods/subpages/goods-detail/index.wxml
@@ -2,7 +2,6 @@
 <wxs module="TIME" src="/utils/filters/time.wxs" />
 
 <import src="/templates/i-split-line/index.wxml"/>
-<import src="./templates/i-price-bar/index.wxml"/>
 
 <!-- 顶部导航 -->
 <view class="nav-bar {{showNavBar ? 'show' : ''}}" style="padding-top: {{statusBarHeight}}px">
@@ -21,39 +20,35 @@
       <swiper-item class="banner-video" wx:if="{{goodsInfo.video}}">
         <video style="width:100%; height:100%;" src="{{goodsInfo.video}}" />
       </swiper-item>
-      <swiper-item wx:for="{{goodsInfo.imageList}}" wx:key="index" bindtap="previewImage" data-current="{{item}}">
+      <swiper-item wx:for="{{goodsInfo.imageList}}" wx:key="index" bindtap="previewImage" data-current="{{item}}" data-urls="{{goodsInfo.imageList}}">
         <image src="{{item}}" style="width:100%; height:100%;" mode='aspectFill' />
       </swiper-item>
     </swiper>
-    <view class="banner-dots" wx:if="{{bannerNum}}">
+    <view class="banner-dots" wx:if="{{goodsInfo.imageList.length}}">
       <text class="cur-dot">{{curDot}}</text>
-      <text> / {{bannerNum}}</text>
+      <text> / {{goodsInfo.imageList.length}}</text>
     </view>
   </view>
 
   <!-- 商品基本信息 -->
-  <view class="shop-info-wrap" wx:if="{{supplierInfo}}">
-    <view class="flagship-title" >
-      <view class="flagship-name">
-        <view class="flagship-pic-wrap">
-          <image class="flagship-pic" src="{{supplierInfo.supplier_img}}"/>
-          <image class="firm-icon" wx:if="{{supplierInfo.is_enterprise}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
-        </view>
-        <view>{{supplierInfo.supplier_name}}</view>
-        <image style="width: 48rpx; height: 48rpx;" src="./images/shop-icon.png"/>
+  <view class="goods-info-wrap">
+    <view class="nomal-bar">
+      <view class="nomal-bar-price">
+        <price-unit price="{{goodsInfo.price}}" fontSize="28rpx" integerPartFontSize="48rpx" />
+        <view class="nomal-bar-market-price">原价￥{{goodsInfo.marketPrice}}</view>
       </view>
-      <view class="goFlagship" ontap="goShop">
-        <view class="goFlagship-tip">进入店铺</view>
-        <image style="width: 16rpx; height: 16rpx;" src="https://img.ubo.vip/mp/selection/goods-detail/to-icon.png" />
+      <view class="nomal-bar-sale-amount">{{goodsInfo.salesVolume}}件已买</view>
+    </view>
+    <view class="goods-name-wrap">
+      <view class="goods-name">
+        <text class="goods-tag" wx:if="{{!goodsInfo.shopInfo}}">自营</text>
+        <text>{{goodsInfo.name}}</text>
       </view>
     </view>
-    <scroll-view scroll-x class="goods-list-wrap">
-      <i-goods-showcase data="{{supplierInfo.top_goods}}" />
-    </scroll-view>
   </view>
 
   <!-- 规格选择 -->
-  <view class="list-spec" wx:if="{{goodsType !== 6}}">
+  <view class="list-spec">
     <view>规格</view>
     <view class="choose-btn" data-action-type="0" bindtap='showSpecModal'>
       <view class="choose-btn-tip">{{specTips ? '已选：' + STRING.slice(specTips, 20) : '请选择'}}</view>
@@ -62,14 +57,14 @@
   </view>
 
   <!-- 店铺信息 -->
-  <view class="shop-info-wrap" wx:if="{{supplierInfo}}">
+  <view class="shop-info-wrap" wx:if="{{goodsInfo.shopInfo}}">
     <view class="flagship-title" >
       <view class="flagship-name">
         <view class="flagship-pic-wrap">
-          <image class="flagship-pic" src="{{supplierInfo.supplier_img}}"/>
-          <image class="firm-icon" wx:if="{{supplierInfo.is_enterprise}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
+          <image class="flagship-pic" src="{{goodsInfo.shopInfo.avatar}}"/>
+          <image class="firm-icon" wx:if="{{goodsInfo.shopInfo.type === 2}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
         </view>
-        <view>{{supplierInfo.supplier_name}}</view>
+        <view>{{goodsInfo.shopInfo.name}}</view>
         <image style="width: 48rpx; height: 48rpx;" src="./images/shop-icon.png"/>
       </view>
       <view class="goFlagship" ontap="goShop">
@@ -78,27 +73,30 @@
       </view>
     </view>
     <scroll-view scroll-x class="goods-list-wrap">
-      <i-goods-showcase data="{{supplierInfo.top_goods}}" />
+      <i-goods-showcase data="{{goodsInfo.shopInfo.recommendGoodsList}}" />
     </scroll-view>
   </view>
 
   <!-- 商品详情 -->
-  <template is="i-split-line" wx:if="{{goodsDetailImgs.length}}" data="{{desc: '宝贝详情'}}"/>
-  <view class="goods-detail-spec" wx:if="{{goodsDetailSpec.length}}">
-    <view class="detail-spec-title">产品规格</view>
-    <view class="detail-spec-list" wx:for="{{goodsDetailSpec}}" wx:key="index">
-      <view class="spec-list-label">{{item.label}}</view>
-      <view class="spec-list-detail">{{item.price}}</view>
-    </view>
-  </view>
-  <view class="goods-detail" wx:if="{{goodsDetailImgs.length}}">
-    <image wx:for="{{goodsDetailImgs}}" wx:key="index" style="width: 100%" mode="widthFix" src="{{item}}" lazy-load="{{true}}" data-current="{{item}}" data-urls="{{goodsDetailImgs}}" bindtap="previewImage" />
+  <template is="i-split-line" wx:if="{{goodsInfo.detailImageList.length}}" data="{{desc: '宝贝详情'}}"/>
+  <view class="goods-detail" wx:if="{{goodsInfo.detailImageList.length}}">
+    <image 
+      style="width: 100%"
+      wx:for="{{goodsInfo.detailImageList}}" 
+      wx:key="index" 
+      src="{{item}}" 
+      mode="widthFix" 
+      lazy-load 
+      bindtap="previewImage"
+      data-current="{{item}}" 
+      data-urls="{{goodsInfo.detailImageList}}" 
+    />
   </view>
 
   <!-- 商品推荐 -->
   <view class="recommend-goods-wrap" wx:if="{{recommendGoods.length}}">
     <template is="i-split-line" data="{{desc: '为您推荐'}}"/>
-    <i-fall-flow lists="{{recommendGoods}}" generic:list="i-goods-list-flow" />
+    <fall-flow list="{{goodsInfo.recommendGoodsList}}" generic:item="goods-item" />
   </view>
 
   <!-- nomore -->
@@ -121,25 +119,9 @@
       <image style="width: 64rpx; height: 64rpx" src="./images/share-icon.png"/>
       <view>分享</view>
     </view>
-    <view class="buy-btn" wx:if="{{goodsType !== 6}}">
-      <view class="add-shopcart-btn {{!isOnSale || !stock ? 'invalid' : ''}}" wx:if="{{!anchorType}}" data-action-type="1" bindtap='showSpecModal'>加入购物车</view>
-      <view class="add-library-btn {{!isOnSale || !stock ? 'invalid' : ''}}" wx:if="{{anchorType}}" bindtap='addLibrary'>{{isOnshelf ? '选品已添加' : '加入选品库'}}</view>
-      <view class="buy-now-btn {{!isOnSale || !stock ? 'invalid' : ''}}" data-action-type="2" bindtap='showSpecModal'>
-        <text wx:if="{{!unStart && !anchorType}}">立即购买</text>
-        <view class="btn-status-is-anchor" wx:if="{{!unStart && anchorType}}" data-action-type="0" catchtap='showSpecModal'>
-          <view>省钱购</view>
-          <view class="commission">省{{commission}}</view>
-        </view>
-        <view class="btn-count-down" wx:if="{{unStart}}">
-          <view style="font-size: 24rpx;">距开始剩</view>
-          <view>{{countDown.hour}}:{{countDown.minute}}:{{countDown.second}}</view>
-        </view>
-      </view>
-    </view>
-    <view class="spike-buy-btn {{unStart && spikeInfo.is_remind ? 'invalid' : ''}}" wx:if="{{goodsType === 6}}">
-      <view class="btn-inner" wx:if="{{unStart && !spikeInfo.is_remind}}" bindtap='subscribeSpikeNotice'>提前3分钟提醒</view> 
-      <view class="btn-inner" wx:if="{{unStart && spikeInfo.is_remind}}">已设置开抢提醒</view>
-      <view class="btn-inner" wx:if="{{!unStart}}" bindtap='buySpike'>立即抢购</view>
+    <view class="buy-btn">
+      <view class="add-shopcart-btn {{!goodsInfo.stock ? 'invalid' : ''}}" data-action-type="1" bindtap='showSpecModal'>加入购物车</view>
+      <view class="buy-now-btn {{!goodsInfo.stock ? 'invalid' : ''}}" data-action-type="2" bindtap='showSpecModal'>立即购买</view>
     </view>
   </view>
 </view>
