--- a/pages/mall/subpages/goods/subpages/goods-detail/index.wxss
+++ b/pages/mall/subpages/goods/subpages/goods-detail/index.wxss
@@ -1,5 +1,4 @@
 @import "/templates/i-split-line/index.wxss";
-@import "./templates/i-price-bar/index.wxss";
 
 image {
   vertical-align: top;
@@ -140,6 +139,16 @@ image {
   border-radius: 12rpx;
   background: #fff;
   overflow: hidden;
+}
+.nomal-bar {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 24rpx 24rpx 0;
+}
+.nomal-bar-sale-amount {
+  font-size: 28rpx;
+  color: #999;
 }
 .bonus-bar {
   display: flex;
