--- a/pages/mall/subpages/goods/subpages/goods-detail/index.wxss
+++ b/pages/mall/subpages/goods/subpages/goods-detail/index.wxss
@@ -18,8 +18,23 @@ image {
   z-index: 20;
 }
 .nav-bar.show {
-  background-color: #000;
+  background: #161F4E;
   box-shadow: 0 2rpx 2rpx rgba(0,0,0,0.05);
+}
+.back-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 2px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.3);
+  border: 0.5px solid rgba(255,255,255,0.3);
+}
+.back-icon.show {
+  background: none;
+  border: 0.5px solid transparent;
 }
 .menu-wrap {
   position: absolute;
@@ -34,20 +49,23 @@ image {
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 17px;
 }
+.menu-wrap.show {
+  background: none;
+}
 .menu-tips {
   position: relative;
   line-height: 32px;
   font-size: 15px;
   font-weight: 500;
 }
-.menu-wrap.show .menu-tips.show::after {
+.menu-wrap.show > .menu-tips.show::after {
   position: absolute;
   left: 0;
   bottom: 3px;
   width: 30px;
   height: 3px;
   content: '';
-  background-color: #F7CC9C;
+  background-color: #1986F8;
   border-radius: 2px 0px 2px 0px;
 }
 .menu-split {
@@ -135,7 +153,7 @@ image {
 /* 商品基本信息 */
 .goods-info-wrap {
   margin: 18rpx 24rpx;
-  padding-bottom: 24rpx;
+  padding: 24rpx;
   border-radius: 12rpx;
   background: #fff;
   overflow: hidden;
@@ -145,7 +163,6 @@ image {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  padding: 24rpx 24rpx 0;
   font-size: 28rpx;
 }
 .nomal-bar-price {
@@ -154,49 +171,20 @@ image {
 }
 .nomal-bar-market-price {
   margin-left: 16rpx;
-  color: #999;
+  color: #bbb;
   text-decoration: line-through;
 }
 .nomal-bar-sale-amount {
   color: #999;
 }
 
-.bonus-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 10rpx;
-  padding: 0 24rpx;
-}
-.bonus-tips {
-  display: flex;
-}
-.bonus-tip {
-  margin-right: 8rxp;
-  padding: 0 12rpx;
-  height: 36rpx;
-  color: #D0132B;
-  font-size: 24rpx;
-  line-height: 36rpx;
-  background: #FFE9E4;
-  border-radius: 8rpx;
-}
-.bonus-btn {
-  display: flex;
-  align-items: center;
-  color: #D0132B;
-  font-size: 24rpx;
-}
 .goods-name-wrap {
   display: flex;
   margin-top: 10rpx;
-  padding: 0 24rpx;
 }
 .goods-name {
   margin-top: 8rpx;
-  padding-right: 68rpx;
   flex: 1;
-  height: 80rpx;
   line-height: 40rpx;
   font-size: 30rpx;
   color: #333333;
@@ -221,51 +209,6 @@ image {
   color: #FFE5BD;
   border-radius: 8rpx;
   background: linear-gradient(90deg, #404A5C 0%, #0F131A 100%);
-}
-.goods-tag.sale {
-  margin-right: 20rpx;
-  color: #fff;
-  border-radius: 18rpx 18rpx 4rpx 18rpx;
-  background: linear-gradient(125deg,rgba(255,0,162,1) 0%,rgba(255,0,57,1) 100%);
-}
-.goods-tag.promotion {
-  margin-right: 20rpx;
-  color: #fff;
-  border-radius: 18rpx 18rpx 4rpx 18rpx;
-  background: linear-gradient(90deg,rgba(255,54,50,1),rgba(246,178,102,1));
-}
-.share-btn {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #666;
-  font-size: 20rpx;
-  line-height: 1;
-}
-.goods-desc-tips {
-  margin-top: 14rpx;
-  padding: 0 24rpx;
-  font-size: 24rpx;
-  color: #999;
-  line-height: 1;
-}
-.goods-desc-tip:first-child {
-  margin-left: 0;
-}
-.advance-sale-tip {
-  margin-top: 14rpx;
-  padding: 0 24rpx;
-  display: flex;
-  font-size: 24rpx;
-  color: #E22A2A;
-  line-height: 1;
-}
-.alarm-icon {
-  margin-top: 4rpx;
-  margin-right: 5rpx;
-  width: 24rpx;
-  height: 26rpx;
-  flex-shrink: 0;
 }
 
 /* 领券和促销  */
@@ -566,15 +509,20 @@ image {
 .bottom-bar-main {
   display: flex;
   align-items: center;
-  padding: 10rpx;
+  padding: 12rpx 24rpx;
   padding-bottom: calc(10rpx + env(safe-area-inset-bottom));
   background-color: #fff;
   box-sizing: initial;
   box-shadow: 0 -2rpx 2rpx 0 rgba(0,0,0,0.05);
 }
+.bottom-bar-icon-wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 24rpx;
+  flex: 1;
+}
 .bottom-bar-icon {
   position: relative;
-  flex: 1;
   text-align: center;
   font-size: 20rpx;
   font-weight: 500;
@@ -597,26 +545,25 @@ image {
 
 .buy-btn {
   display: flex;
-  flex: 1;
-  margin: 0 24rpx;
-}
-.add-shopcart-btn, .add-library-btn, .buy-now-btn {
-  width: 228rpx;
+  width: 456rpx;
   height: 80rpx;
-  font-size: 32rpx;
-  font-weight: 600;
+  border-radius: 40rpx;
+  overflow: hidden;
+}
+.add-shopcart-btn, .buy-now-btn {
+  flex: 1;
+  font-size: 28rpx;
+  font-weight: 500;
   line-height: 80rpx;
   text-align: center;
-  border-radius: 12rpx;
 }
-.add-shopcart-btn, .add-library-btn {
-  margin-right: 16rpx;
-  color: #FFE5BD;
-  background: linear-gradient(90deg, #404A5C 0%, #0F131A 100%);
+.add-shopcart-btn {
+  color: #fff;
+  background: #1986F8;
 }
 .buy-now-btn {
-  color: #0F131A;
-  background: linear-gradient(270deg, #FFD699 0%, #FFE5BD 100%);
+  color: #fff;
+  background: #161F4E;
 }
 .btn-status-is-anchor, .btn-count-down {
   display: flex;
