--- a/pages/mall/subpages/goods/subpages/goods-detail/index.wxss
+++ b/pages/mall/subpages/goods/subpages/goods-detail/index.wxss
@@ -68,15 +68,6 @@
   color: #EFEFEF;
 }
 
-.wrap.fixed {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
 /* 轮播相关 */
 .banner-wrap {
   position: relative;
@@ -186,23 +177,31 @@
 
 /* 规格选择栏 */
 .list-spec {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   margin: 18rpx 24rpx;
   padding: 0 24rpx;
   height: 90rpx;
-  color: #333;
   font-size: 28rpx;
-  font-weight: 600;
   background: #fff;
   border-radius: 12rpx;
+}
+.list-spec-title {
+  color: #333;
+  font-weight: 600;
 }
 .choose-btn {
   display: flex;
   align-items: center;
+  flex: 1;
+  margin-left: 24rpx;
+}
+.choose-btn-desc {
+  flex: 1;
   color: #a6a6a6;
-  font-weight: 400;
+  text-align: right;
+}
+.choose-btn-icon {
+  width: 16rpx;
+  height: 16rpx;
 }
 
 /* 商品详情 */
