--- a/app.wxss
+++ b/app.wxss
@@ -11,6 +11,23 @@ view, text, image, scroll-view, navigator, swiper, swiper-item {
   box-sizing: border-box;
 }
 
+button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  border-radius: 0;
+}
+button::after {
+  content: '';
+  width: 0;
+  height: 0;
+  display: none;
+  background-color: transparent;
+}
+
 .num {
   font-weight: bold;
 }
