--- a/pages/mall/subpages/goods/subpages/goods-detail/components/spec-popup/index.wxml
+++ b/pages/mall/subpages/goods/subpages/goods-detail/components/spec-popup/index.wxml
@@ -1,42 +1,57 @@
-<van-popup
-  show="{{ show }}"
-  round
-  closeable
-  position="bottom"
-  bind:close="onClose"
->
+<van-popup show="{{show}}" round position="bottom" bind:close="hide">
   <view class="spec-selection">
     <view class="selectedGoods-info-wrap">
-      <image style="width: 200rpx; height: 200rpx;" mode="aspectFill" src="{{specPic || goodsPic}}" />
+      <image style="width: 200rpx; height: 200rpx;" mode="aspectFill" src="{{selectedSkuIndex !== -1 ? (goodsInfo.skuList[selectedSkuIndex].image || goodsInfo.defaultSpecImage) : goodsInfo.defaultSpecImage}}" />
       <view class="selectedGoods-info">
-        <view class="selectedGoods-name" wx:if="{{goodsName}}">{{goodsName}}</view>
-        <view class="selectedGoods-price">￥{{specPrice || basePrice}}</view>
-        <view class="selectedGoods-stock">库存{{specStock !== '' ? specStock : totalStock}}</view>
-        <view>请选择规格</view>
+        <price-unit price="{{selectedSkuIndex !== -1 ? goodsInfo.skuList[selectedSkuIndex].price : (goodsInfo.price || 0)}}" />
+        <view class="selectedGoods-stock">库存{{selectedSkuIndex !== -1 ? goodsInfo.skuList[selectedSkuIndex].stock : goodsInfo.stock}}</view>
+        <view class="omit single-line">{{ selecteSpecDesc ? '已选：' + selecteSpecDesc : '请选择规格'}}</view>
       </view>
     </view>
     <scroll-view class="selection-mian" scroll-y>
-      <view class="spec-list" wx:for="{{mainInfo.specification}}" wx:key="index" wx:for-index="specListIndex">
+      <view class="spec-list" wx:for="{{specList}}" wx:key="index">
         <view class="dividing-line">
           <view class="dividing-line-title">{{item.name}}</view>
         </view>
-        <view class="spec-tips {{specIdArr[specListIndex] === tips.id ? 'selected' : ''}}" wx:for="{{item.values}}" wx:key="index" wx:for-item="tips" ontap="selectSpec" data-spec-list-index="{{specListIndex}}" data-spec-id="{{tips.id}}" data-spec-name="{{tips.label}}" data-spec-pic="{{tips.goods_attr_thumb}}" data-spec-price="{{tips.price}}">{{tips.label}}</view>
+        <view 
+          class="spec-tips {{_item.selected ? 'selected' : ''}}" 
+          wx:for="{{item.options}}" 
+          wx:key="_index" 
+          wx:for-item="_item" 
+          wx:for-index="_index" 
+          bindtap="selectSpec"
+          data-index="{{index}}"
+          data-option-index="{{_index}}"
+          >
+          {{_item.name}}
+        </view>
       </view>
-      <view class="spec-list" wx:if="{{actionType === 0 || actionType === 1 || actionType === 2}}">
+      <view class="spec-list">
         <view class="dividing-line">
           <view class="dividing-line-title">数量</view>
         </view>
         <view class="count-control-wrap">
-          <view class="limit-tips"></view>
-          <van-stepper value="{{count}}" bind:change="countChange" integer />
+          <van-stepper bind:change="countChange" integer />
         </view>
       </view>
     </scroll-view>
-    <view wx:if="{{actionType === 0}}" class="btns-wrap" >
-      <view class="spec-btn addCart" ontap="addToShopcart">加入购物车</view>
-      <view class="spec-btn directBuy" ontap="buyNow">立即购买</view>
+    <view class="btns-wrap row">
+      <button 
+        class="add-cart-btn" 
+        style="margin-right: {{mode === 0 ? '12rpx' :  '0'}};"
+        wx:if="{{mode !== 2}}" 
+        bindtap="addCart"
+      >
+        加入购物车
+      </button>
+      <button 
+        class="buy-btn" 
+        style="margin-left: {{mode === 0 ? '12rpx' :  '0'}};"
+        wx:if="{{mode !== 1}}" 
+        bindtap="buyNow"
+      >
+        立即购买
+      </button>
     </view>
-    <view wx:if="{{actionType === 1 || actionType === 2 || actionType === 3}}" class="finish-btn {{actionType === 3 ? 'in-cart' : ''}}" ontap="finish">完成</view>
-    <view wx:if="{{actionType === 4}}" class="apply-btn" ontap="finish">报名支付</view>
   </view>
 </van-popup>
